app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mockoon
  namespace: mockoon
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: mock.temmpy.com
    external-dns.alpha.kubernetes.io/target: 609e2085-6da6-405a-8de1-69e1ad7283dd.cfargotunnel.com
spec:
  ingressClassName: nginx
  rules:
    - host: mock.temmpy.com
      http:
        paths:
          - path: /mendix-deploy-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mockoon
                port:
                  number: 3001
          - path: /mendix-build-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mockoon
                port:
                  number: 3002
          - path: /mendix-repository-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mockoon
                port:
                  number: 3003
          - path: /mendix-git-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mockoon
                port:
                  number: 3004
